--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,15 @@
 .oh,.ot,.tt{float:left;padding:0 2% 2% 0;width:48%}.ot{width:31%}.tt{width:65%}.cl{clear:both}
 
+.clearfix{
+ clear:both;	
+}
+.fl{
+float:left;	
+}
+.fr{
+float:right;	
+}
+
 /* ===== Primary Styles ========================================================
    Author:
    ========================================================================== */
