--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,8 @@ float:left;
 float:right;	
 }
 
+.centered { margin: 0 auto; }
+
 /* ===== Primary Styles ========================================================
    Author:
    ========================================================================== */
