--- a/css/style.css
+++ b/css/style.css
@@ -12,10 +12,41 @@ float:right;
 
 .centered { margin: 0 auto; }
 
-/* ===== Primary Styles ========================================================
-   Author:
-   ========================================================================== */
-   
+
+/* 
+*
+*  PRODUCT
+*
+*/
+
+#products_row{
+	width:100%;
+	height:125px;
+	overflow-x:scroll;
+	overflow-y:hidden;
+	background:red;
+}
+#products_row div{
+	width:2000px;
+	height:125px;
+}
+#products_row div img{
+	margin-right:15px;
+	float:left;
+	cursor:pointer;
+}
+#picture{
+/*	width:270px;
+	height:300px;*/
+	border:1px dotted gray;
+	cursor:pointer;
+}
+
+/* 
+*
+*  TAG
+*
+*/
 
 .tag_field{
 	width: 128px;
@@ -26,9 +57,88 @@ float:right;
 	margin-right: 8px;
 	margin-bottom: 9px;
 }
+.tags.container{
+	padding-left:5px;
+	margin-bottom:20px;
+}
+.tags.container .colors .box{
+	width:30px;
+	height:30px;
+	margin-right:5px;
+	border:1px dotted gray;
+	cursor:pointer;
+	text-align:center;
+	box-sizing:border-box;
+	padding:4px;
+	font-weight:bold;
+}
+
+ .tags.container .articles .box
+,.tags.container .typeOf .box
+,.tags.container .custom .box
+{
+	width:130px;
+	height:30px;
+	margin-right:5px;
+	margin-bottom:5px;
+	border:1px dotted gray;
+	cursor:pointer;
+	text-align:center;
+	box-sizing:border-box;
+	padding:4px;
+  -webkit-border-radius: 5px;
+     -moz-border-radius: 5px;
+          border-radius: 5px;
+}
+
+/* 
+*
+* SEARCH  
+*
+*/
+
+.results.container {
+  background: #FFF;
+  padding: 5px;
+  margin-bottom: 20px;
+  border-radius: 5px;
+  clear: both;
+  -webkit-border-radius: 5px;
+     -moz-border-radius: 5px;
+          border-radius: 5px;
+}
+
+.results.container .box {
+  margin: 5px;
+  padding: 5px;
+  background: #D8D5D2;
+  font-size: 11px;
+  line-height: 1.4em;
+  float: left;
+  -webkit-border-radius: 5px;
+     -moz-border-radius: 5px;
+          border-radius: 5px;
+}
 
 
 
+.results.container .box img{
+  display: block;
+  width: 100%;
+}
+
+
+.col1 { width: 80px; }
+.col2 { width: 180px; }
+.col3 { width: 280px; }
+.col4 { width: 380px; }
+.col5 { width: 480px; }
+
+.col1 img { max-width: 80px; }
+.col2 img { max-width: 180px; }
+.col3 img { max-width: 280px; }
+.col4 img { max-width: 380px; }
+.col5 img { max-width: 480px; }
 
 
 
